[project]
name = "insurancerag"
version = "0.1.0"
description = "Learning-first insurance compliance RAG system."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]